change Useremail to Username as basic Auth process

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -2,7 +2,8 @@
     <h2>Register</h2>
     <form [formGroup]='registerForm' (ngSubmit)='onSubmit()'>
     <input formControlName='fullName' placeholder='Full Name' />
-    <input formControlName='email' placeholder='Email' />
+    <input formControlName='email' placeholder='Email'  />
+    <input formControlName='username' placeholder='Username'  />
     <input formControlName='password' type='password' placeholder='Password' />
     <button type='submit'>Register</button>
     </form>
