--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class='login-container'>
     <h2>Login</h2>
     <form [formGroup]='loginForm' (ngSubmit)='onSubmit()'>
-    <input formControlName='email' placeholder='Email' />
+    <input formControlName='username' placeholder='username' />
     <input formControlName='password' type='password' placeholder='Password' />
     <button type='submit'>Login</button>
     </form>
