update Login Component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,9 +9,14 @@
         <input formControlName='password' type='password' placeholder='Password' />
         <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.touched || loginForm.get('password')?.dirty)">
             <small class="error" *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</small>
-            <small class="error" *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters.</small>
+            <small class="error" *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 4 characters.</small>
         </div>
         
         <button type='submit' [disabled]="loginForm.invalid">Login</button>
     </form>
+
+        <!-- Error message display -->
+        <div *ngIf="errorMessage" class="error-message">
+            {{ errorMessage }}
+        </div>
 </div>
