--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -11,7 +11,7 @@
     </nav>
     <div class="user-profile">
         <span class="user-name">Hello, User</span>
-        <img src="assets/images/user-avatar.png" alt="User Avatar" class="avatar" />
+        <img src="../../../assets/images/userlogo.png" alt="User Avatar" class="avatar" />
         <button (click)="onLogout()" class="logout-button">Logout</button>
     </div>
 </header>
