--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,7 @@
 /* variables.css */
 :root {
-  --primary-color: #3498db;
-  --secondary-color: #2ecc71;
+  --primary-color: #313646;
+  --secondary-color: #424c67b9; /*#2ecc71;*/
   --text-color: #333;
   --background-color: #f4f4f4;
 }
