--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -15,8 +15,6 @@
             <img src="images/userlogo.png" alt="User Avatar" class="avatar" />
             <button (click)="onLogout()" class="logout-button">Logout</button>
         </div>
-        <span class="company-name">{{ companyName }}</span> <!-- Company name below user profile -->
+        <span class="company-name">{{ companyName }}</span>
     </div>
 </header>
-
-
